tests/format/misc/errors/babel-ts/type-annotation-in-jsx.tsx
function Foo() {
  return (
    <div propA={[ key: value ]} propsB={(a: b)} />
  );
}
